WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59994
Send a PluginProcessCrashed message to all web processes when a plug-in crashes
https://bugs.webkit.org/show_bug.cgi?id=59994
Summary
Send a PluginProcessCrashed message to all web processes when a plug-in crashes
Anders Carlsson
Reported
2011-05-02 18:08:57 PDT
Send a PluginProcessCrashed message to all web processes when a plug-in crashes
Attachments
Patch
(4.60 KB, patch)
2011-05-02 18:10 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-02 18:10:48 PDT
Created
attachment 92024
[details]
Patch
Anders Carlsson
Comment 2
2011-05-02 18:12:45 PDT
Committed
r85569
: <
http://trac.webkit.org/changeset/85569
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug