Source/WebKit2/WebProcess/WebProcess.h
@@ -159,6 +159,10 @@ private:
     void clearPluginSiteData(const Vector<String>& pluginPaths, const Vector<String>& sites, uint64_t flags, uint64_t maxAgeInSeconds, uint64_t callbackID);
 #endif
     
+#if ENABLE(PLUGIN_PROCESS)
+    void pluginProcessCrashed(const String& pluginPath);
+#endif
+
     void startMemorySampler(const SandboxExtension::Handle&, const String&, const double);
     void stopMemorySampler();
 
